Initial structure, controller, service, writer (swagger pattern)
